--- a/views/video.jade
+++ b/views/video.jade
@@ -7,7 +7,9 @@ html
 	body
 		div.container
 			h1 Video
-			div= video.name
+			div= video.category
+			div= video.province
+			div= video.title
 			div= video.intro
 			div= video.cover
 			div= video.video
@@ -18,13 +20,35 @@ html
 					div: a(href="/uncollect/"+video.id) Remove from collection
 
 			if member != undefined && member.local.email == "taoxh@hotmail.com"
+				- var category = ['business', 'culture', 'art']
+				- var province = ['beijing', 'shanghai', 'jiangxi']
 				form(action="/edit/"+video.id method="post" accept-charset="utf-8")
-					label(for="name") Name
-					input(type="text" name="name" value=""+video.name)
+					label(for="category") Category
+					fieldset(data-role="controlgroup" data-type="horizontal")
+						each val in category
+							if val == video.category
+								input(name="category" id= val value= val type="radio" checked="checked")
+							else
+								input(name="category" id= val value= val type="radio")
+							label(for= val style="text-transform: capitalize") #{val}
+					label(for="province") Province
+					fieldset(data-role="controlgroup" data-type="horizontal")
+						each val in province
+							if video.province.indexOf(val) > -1
+								input(name="province" id= val value= val type="checkbox" checked="checked")
+							else
+								input(name="province" id= val value= val type="checkbox")
+							label(for= val style="text-transform: capitalize") #{val}
+					label(for="station") Station
+					input(type="text" name="station" value= video.station required)
+					label(for="program") Program
+					input(type="text" name="program" value= video.program required)
+					label(for="title") Title
+					input(type="text" name="title" value= video.title required)
 					label(for="cover") Cover
-					input(type="text" name="cover" value=""+video.cover)
+					input(type="text" name="cover" value= video.cover required)
 					label(for="intro") Introduction
-					textarea(cols="40" rows="6" name="intro") #{video.intro}
+					textarea(cols="40" rows="6" name="intro" required) #{video.intro}
 					label(for="video") Video
-					input(type="text" name="video" value=""+video.video)
-					input(type='submit')
+					input(type="text" name="video" value= video.video required)
+					input(type='submit' value="Submit")
