--- a/views/index.jade
+++ b/views/index.jade
@@ -1,9 +1,8 @@
-doctype html
-html
-	head
-		title Propeller TV
-	body
-		div.container Home
-			p Login or Register with:
-			a(href="/login") Local Login		
-			a(href="/signup") Local Signup
+extends layout
+
+block content
+	div(data-role="content")
+		div.about
+			h1 Propeller TV
+			p Propeller TV is the premium channel for the UK-China community. Watch us for business, culture and entertainment. We broadcast and produce high quality bi-lingual programmes and our mission is to build bridges that strengthen cultural exchange and economic development between the UK and China.
+
