--- a/views/login.jade
+++ b/views/login.jade
@@ -1,14 +1,11 @@
-doctype html
-html
-	head
-		title Propeller TV
-	body
-		div.container
-			if message.length > 0
-				div #{message}
-			form(action="/login" method="post" accept-charset="utf-8")
-				label(for="name") Email
-				input(type="email" name="email")
-				label(for="cover") Password
-				input(type="password" name="password")
-				input(type='submit' value="Login") 
+extends layout
+
+block content
+	if message.length > 0
+		div #{message}
+	form(action="/login" method="post" accept-charset="utf-8")
+		label(for="name") Email
+		input(type="email" name="email")
+		label(for="cover") Password
+		input(type="password" name="password")
+		input(type='submit' value="Login") 
